--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
         <p><strong>Pure Lucknowi Viscose Chikan Kurti (Red)</strong><br>₹2,950</p>
       </div>
       <div>
-        <img src="Satin 3D Suit Chikankari Lucknowi.jpg" alt="Satin 3D Suit Chikankari Lucknowi">
+        <img src="Satin 3D suit chikankari lucknowi.png" alt="Satin 3D Suit Chikankari Lucknowi">
         <p><strong>Satin 3D Suit Chikankari Lucknowi</strong><br>₹3,200</p>
       </div>
       <div>
-        <img src="Heavy Bridal Gharara Full Set Hand Embroidery.png" alt="Heavy Bridal Gharara Full Set Hand Embroidery">
+        <img src="Heavy Bridal Gharara full set hand embroidery.png" alt="Heavy Bridal Gharara Full Set Hand Embroidery">
         <p><strong>Bridal Gharara Full Set – Hand Embroidered</strong><br>₹5,200</p>
       </div>
       <div>
-        <img src="3D Chikankari Lucknowi Kurti Pist Green.png" alt="3D Chikankari Lucknowi Kurti Pist Green">
+        <img src="3D chikankari lucknowi kurti.png" alt="3D Chikankari Lucknowi Kurti Pist Green">
         <p><strong>3D Chikankari Lucknowi Kurti (Pista Green)</strong><br>₹2,950</p>
       </div>
       <div>
@@ -227,15 +227,15 @@
     <h2>Best Sellers – Kids Chikankari Sets</h2>
     <div class="grid">
       <div>
-        <img src="Printed Kids Lucknowi Chikankari Set.jpg" alt="Printed Kids Lucknowi Chikankari Set">
+        <img src="Printed Kids Lucknowi Chikankari Set.png" alt="Printed Kids Lucknowi Chikankari Set">
         <p><strong>Printed Kids Lucknowi Set</strong><br>₹1,150</p>
       </div>
       <div>
-        <img src="Mal Mal Kids Printed Chikankari Lucknowi Set.jpg" alt="Mal Mal Kids Printed Chikankari Lucknowi Set">
+        <img src="mal mal kids printed chikankari lucknowi set.png" alt="Mal Mal Kids Printed Chikankari Lucknowi Set">
         <p><strong>Mal Mal Printed Kids Lucknowi Set</strong><br>₹1,170</p>
       </div>
       <div>
-        <img src="Rayon Kids Chikankari Lucknow Pink Set.jpg" alt="Rayon Kids Chikankari Lucknow Pink Set">
+        <img src="Rayon Kids Chikankari Lucknow Pink Set.png" alt="Rayon Kids Chikankari Lucknow Pink Set">
         <p><strong>Rayon Chikankari Kids Set (Pink)</strong><br>₹1,275</p>
       </div>
     </div>
