--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <p><strong>Mal Mal Printed Kids Lucknowi Set</strong><br>₹1,170</p>
       </div>
       <div>
-        <img src="Rayon Kids Chikankari Lucknow Pink Set.png" alt="Rayon Kids Chikankari Lucknow Pink Set">
+        <img src="Rayon Kids Chikankari Luckknow Pink Set.png" alt="Rayon Kids Chikankari Lucknow Pink Set">
         <p><strong>Rayon Chikankari Kids Set (Pink)</strong><br>₹1,275</p>
       </div>
     </div>
