--- a/index.html
+++ b/index.html
@@ -262,14 +262,19 @@
     </div>
   </section>
 
-  <section>
-    <h2>Visit or Order Online</h2>
-    <div class="cta-buttons">
-      <a class="btn" href="https://wa.me/919892218187" target="_blank">Order on WhatsApp</a>
-      <a class="btn" href="https://instagram.com/designsbyposhaakh" target="_blank">Follow on Instagram</a>
-    </div>
-  </section>
+.cta-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.75rem;
+  margin-top: 1rem;
+}
 
+.cta-buttons a {
+  flex: 1 1 150px;
+  text-align: center;
+}
+  
   <footer>
     <p>&copy; 2025 Poshaakh</p>
     <p>Made with ♥ in Jogeshwari, Mumbai</p>
