--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       font-size: 0.95rem;
     }.
     
-    cta-buttons {
+ .cta-buttons {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -168,10 +168,11 @@
 }
 
 .cta-buttons a {
-  flex: 1 1 160px;
-  max-width: 200px;
+  flex: 1 1 45%;  
+  max-width: 200px;  
   text-align: center;
 }
+
     .testimonials {
       max-width: 600px;
       margin: 0 auto;
